Fixing the image on mobile of hero and about us sections

--- a/sections-styles/hero.css
+++ b/sections-styles/hero.css
@@ -38,7 +38,6 @@
 }
 
 .hero__image {
-    flex: 1;
     max-width: 100%;
     overflow: hidden;
     object-fit: cover;
@@ -70,6 +69,10 @@
         gap: var(--gap-20px);
         justify-content: space-between;
         /* align-items: center; */
+    }
+
+    .hero__image {
+        flex: 1;
     }
 
 }
